Make some styling tweaks

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,26 +5,27 @@ layout: default
 <div class="home">  
   {{ content }}
     {% for post in paginator.posts %}
-        <h2 id="page-title">
+      <div class="post-content">
+        <h2 class="page-title">
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </h2>
-        <div>
-        <p class="post-meta">
-          <time datetime="{{ post.published | date_to_xmlschema }}" itemprop="datePublished">
-            Published {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-            {{ post.published | timeago }}
-          </time>
-          {% if post.author %}
-            by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ post.author }}</span></span>
-          {% endif %}</p>
-        </div>
         <div>{{ post.excerpt }}</div>
         <a class="read-more-link" href="{{ post.url | relative_url }}">Read more...</a>
-        
+        <div class="byline">
+          {% if post.author %}
+            <p itemprop="author" class="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ post.author }}</span>
+            </p>
+          {% endif %}
+          <time datetime="{{ post.published | date_to_xmlschema }}" itemprop="datePublished">
+            {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+            {{ post.published | timeago }}
+          </time>
+        </div>
+      </div>
     {% endfor %}
 </div>
 <nav id="pagination">
-	<p id="post-pager">
+	<p id="home-pager">
 	  {% if paginator.next_page_path %}
 	    <a class="next" href="{{paginator.next_page_path | prepend: site.baseurl}}" title="Older Posts">&lt; Older</a>
 	  {% endif %}
