--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,10 +6,10 @@ layout: default
   {{ content }}
     {% for post in paginator.posts %}
       <div class="post-content">
-        <h2 class="page-title">
+        <h1 class="page-title">
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-        <div>{{ post.excerpt }}</div>
+        </h1>
+        <div>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</div>
         <a class="read-more-link" href="{{ post.url | relative_url }}">Read more...</a>
         <div class="byline">
           {% if post.author %}
