Start merging sites

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,21 @@
 <footer id="addendum">
   <div>
-  <div class="columns">
-     &copy; {{ site.copyright_starting_year }} &ndash; {{ site.time | date: '%Y' }} {{ site.copyright_owner }}
-  </div>
       <div class="columns">
-          Proud to call Denton, Texas home!
+         &copy; {{ site.copyright_starting_year }} &ndash; {{ site.time | date: '%Y' }} {{ site.copyright_owner }}
       </div>
       <div class="columns">
+          <p>608 East Hickory Street, Suite 128</p>
+          <p>Denton, Texas 76205</p>
+      </div>
+      <div class="columns">
+          <div class="social-container">
+            <p>
+                <a href="https://www.facebook.com/shepherddoghq" target="_blank">Facebook</a>
+            </p>
+            <p>
+                <a href="https://www.twitter.com/shepherddoghq" target="_blank">Twitter</a>
+            </p>
+          </div>
           <a href="https://shepherddog.co/privacy">Our Privacy Policy</a>
       </div>
   </div>
