--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,51 +18,31 @@
         </div>
         <nav>
             <div class="logo">
-                <a href="https://shepherddog.co/">
+                <a href="/">
                     <span class="logo">
                         <img class="logo"
-                             src="https://shepherddog.co/media/logo.svg" />
+                             src="/media/logo.svg" />
                      </span>
                     <span class="logo-text">
                         <img class="logo text"
-                             src="https://shepherddog.co/media/logo_text.svg" />
+                             src="/media/logo_text.svg" />
                      </span>
                 </a>
             </div>
             <div class="main-nav-list-container">
                 <ul>
-                    <li class="technology-services">
-                        <a href="https://shepherddog.co/technology-services">
-                            What We Do
-                        </a>
-                    </li>
-                    <li class="pricing">
-                        <a href="https://shepherddog.co/pricing">
-                            Pricing
-                        </a>
-                    </li>
                     <li class="who-we-are">
-                        <a href="https://shepherddog.co/who-we-are">
+                        <a href="/who-we-are">
                             Who We Are
                         </a>
                     </li>
-                    <li class="our-work">
-                        <a href="https://shepherddog.co/our-work">
-                            Our Work
-                        </a>
-                    </li>
-                    <li class="our-apps">
-                        <a href="https://shepherddog.co/our-apps">
-                            Our Apps
-                        </a>
-                    </li>
-                    <li class="support">
-                        <a href="https://shepherddog.co/support">
-                            Support
+                    <li class="contact-us">
+                        <a href="/#contact-us">
+                            Contact Us
                         </a>
                     </li>
                     <li class="blog">
-                        <a href="https://blog.shepherddog.co">
+                        <a href="/blog">
                             Blog
                         </a>
                     </li>
@@ -73,7 +53,7 @@
                     <a href="https://www.twitter.com/shepherddoghq"
                        target="_blank">
                         <img alt="twitter logo"
-                             src="https://shepherddog.co/media/twitter-logo-white.png"
+                             src="/media/twitter-logo-white.png"
                              class="twitter-image"
                              width="16px"
                              height="14px" />
@@ -82,7 +62,7 @@
                 <div class="email-container">
                     <a href="mailto:howdy@shepherddog.co">
                         <img alt="Email Icon"
-                             src="https://shepherddog.co/media/mail-white.svg"
+                             src="/media/mail-white.svg"
                              class="twitter-image"
                              width="16px"
                              height="14px" />
