--- a/_layouts/blog_default.html
+++ b/_layouts/blog_default.html
@@ -3,15 +3,16 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="blog">
 
     {% include header.html %}
 
-    <div id="main" class="page-content default" aria-label="Content">
+    <div id="main" class="page-content content" aria-label="Content">
       <div class="sleeve">
         <div id="content">
         {{ content }}
         </div>
+        {% include sidebar.html %}
       </div>
     </div>
 
