More work towards 2.0.0

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,5 @@
   <link rel="stylesheet" href="/css/main.css?v={{ site.version }}" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  <link rel="SHORTCUT ICON" href="/favicon-v1.ico" >
+  <link rel="SHORTCUT ICON" href="/favicon.ico" >
 </head>
