--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,44 +23,50 @@
       </div>
     </div>
     <div class="content">
-      <h2>What's Your Core Competency?</h2>
+      <h2>What Are You Great At?</h2>
       <p>
-        Is it roasting coffee? Baking cakes? Caring for the elderly or infirm? Building devices that connect to the internet? Providing educational resources?
+        Is it caring for the elderly? Building smart devices that work with an app? Providing professional education? Roasting coffee?
       </p>
       <p>
-        Ours is building and maintaining software tools for businesses &mdash; tools used by your customers and employees. We listen to your needs and figure out how to make the technology work for you, whether that means owning every bit of the process or collaborating with your internal team to fill gaps. We've worked with businesses across many industries, have developed the skills to rapidly absorb new information, and hit the ground running.
+        We're great at building and maintaining software tools for businesses &mdash; tools used by your customers and employees. We listen to your needs and figure out how to make the technology work for you, whether that means owning every bit of the process or collaborating with your internal team to fill gaps. We've worked with businesses across many industries and have the skills to rapidly absorb new information so we can hit the ground running.
+      </p>
+      <p>
+        <strong>We handle the tools, systems, and processes needed to make great software so you don't have to.</strong>
       </p>
     </div>
   </div>
   <div class="content-container strengths">
     <div class="content">
       <div class="copy-container">
-        <h2>
+        <h2 class="u-gradient-background">
           Our Strengths
         </h2>
         <p>
-          It's hard to boil a company (even a small company like ours) down into three strengths but this layout looks good and we don't want to overwhelm you. In addition to these, you can read about <a href="https://github.com/Shepherd-Dog/Shepherd-Dog/blob/master/values.md">our core values</a> or some of <a href="/blog">our blog posts</a>.
+          It's hard to boil a company (even a small company like ours) down into three bullets but this layout looks good and we don't want to overwhelm you. In addition to these, you can read about <a href="https://github.com/Shepherd-Dog/Shepherd-Dog/blob/master/values.md">our core values</a> or check out some of <a href="/blog">our favorite blog posts TODO HAVE BLOG POSTS</a>.
         </p>
         <ul class="strengths">
           <li>
             <img src="/media/focus.svg" />
             <h3>Size</h3>
             <p>
-              We're a small, focused team. Our size allows us to avoid communication and project management overhead. Our diverse skillsets allow us to handle everything needed to build and maintain software from initial discovery to final testing.
+              We're a small, focused team. Our size has allowed us to streamline our communication and project management processes. Even though we're small, our track record proves that we can handle everything needed to build and maintain software from initial discovery to final testing.
+            </p>
+            <p>
+              INSERT WHAT THIS MEANS FOR YOU
             </p>
           </li>
           <li>
             <img src="/media/toolbox.svg" />
-            <h3>Tools</h3>
+            <h3>Flexibility</h3>
             <p>
-              We are technology-agnostic, speak many languages, and have experience with a variety of frameworks. This allows us to choose the right thing for your project.
+              We are technology-neutral, know many programming languages, and have experience with a variety of frameworks. This means we will choose the right tools for your new project based upon your business needs. Or if you have existing tools in place we can quickly jump in and start making an impact.
             </p>
           </li>
           <li>
             <img src="/media/care.svg" />
-            <h3>Care</h3>
+            <h3>Dedication</h3>
             <p>
-              We have an unfair advantage &mdash; we care more than most. We pour ourselves entirely into a project and stop at nothing to deliver it.
+              We have an unfair advantage &mdash; we care more. We don't want to put crap into the world. We know that what we build is a reflection of ourselves and that what we build for your business is a reflection of you. We pour ourselves entirely into a project and treat it as if it were our own. INSERT WHAT THIS MEANS FOR YOU
             </p>
             <p>
               Delivering complicated projects is tough and we care enough to fight through the hard times.
@@ -73,7 +79,7 @@
   <div class="content-container">
     <div class="content">
       <div class="copy-container">
-        <h2>
+        <h2 class="u-gradient-background">
           Our Team
         </h2>
         <p>
@@ -144,7 +150,7 @@
   <div class="content-container testimonials">
     <div class="content">
       <div class="copy-container">
-        <h2>
+        <h2 class="u-gradient-background">
           Testimonials
         </h2>
         <p>
@@ -157,7 +163,13 @@
           <li class="u-gradient-background">
             <div class="testimonial-container">
               <p>
-                This is a testimonial. This isn't the real testimonial because I can't find the real testimonial in my email. That is not a good testimonial for my skills at finding emails.
+                THANK YOU! You bailed me out a couple of times!
+              </p>
+              <p>
+                I am very proud of the fact that this tool is coming together so smoothly! You guys have done a great job, and I really appreciate the extra support for things like client kick-off calls - its recognized that its above and beyond what a typical development shop would do.
+              </p>
+              <p>
+                Working with you guys has been incredibly smooth! I greatly appreciate your organization and the fact that you guys are self-sufficient to get stuff done on time, and as promised. 😊
               </p>
               <cite>&mdash; A Director of Operations</cite>
             </div>
@@ -170,21 +182,22 @@
       </div>
     </div>
   </div>
-  <div class="content-container">
+  <div class="content-container project-estimator">
     <div class="content">
       <div class="copy-container">
-        <h2>
+        <h2 class="u-gradient-background">
           Project Estimator
         </h2>
         <p>
           Our bill rate is $124/hour ($62/hour for non-profits) but that number doesn't tell you how much a project will cost. Use our estimator below to get an idea of what different kinds of projects will cost. Estimates generated by the estimator are not binding quotes &mdash; call or email us to get a formal quote.
         </p>
       </div>
+      <a class="button disabled" href="#">Coming Soon</a>
     </div>
   </div>
   <a name="contact-us"></a>
   <div class="content-container call-to-action">
-    <div class="content">
+    <div class="content u-gradient-background">
       <div class="copy-container">
         <h2>
           Get in Touch
